--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="hero text-light text-right pt-5 mt-5">
       <div class="container">
         <h1 class="display-1 font-weight-bold my-5">Comidas del fin del mundo</h1>
-        <p class="my-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="my-5 bg-success">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <a href="#work" class="btn btn-outline-info btn-lg mr-4">Trabajos</a>
         <a href="#contact" class="btn btn-info btn-lg">Contacto</a>
       </div>
